Tue Nov 30 15:02:25 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(IsValidURL): Fix compilation error in
	valid_extensions list handling.
	* contrib/htdig-3.1.4.spec, contrib/htdig-3.1.4-conf.patch:
	Added sample RPM spec file and config patch for it.
	* htdoc/ChangeLog: Update with latest version.

Tue Nov 30 14:01:51 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/where.html: Bump to version 3.1.4.
	* htdoc/THANKS.html: Added new contributors.
	* htdoc/isp.html, htdoc/uses.html, htdoc/main.html, htdoc/mailing.html:
	Updated to versions from htdig.org web site.

Tue Nov 30 13:01:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html: Add release notes for 3.1.4 release.
	* .version, README: Bump for 3.1.4.

Tue Nov 30 11:03:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html(backlink_factor): Added Geoff's clarification of
	what this attribute does.

Tue Nov 30 09:47:05 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc(RetrieveLocal): Handle common extensions for
	text/plain, application/pdf & application/postscript.
	* htdig/Retriever.cc(IsValidURL): Add valid_extensions list handling,
	make it and bad_extensions case insensitive.
	* htcommon/defaults.cc: Add config attribute valid_extensions,
	with default as empty.
	* htdoc/attrs.html, cf_by{name,prog}.html: Document valid_extensions.

Tue Nov 30 09:02:02 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_href & got_redirect): remove all of Patrick's
	case insensitive server code, to replace it with Geoff's fix to URL.cc
	* htlib/URL.cc(normalizePath, path): If not case_sensitive,
	lowercase the URL. Should ensure that all URLs are appropriately
	lowercased, regardless of where they're generated.

Mon Nov 29 20:25:01 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc, htdig/Retriever.h, htdig/Server.cc(push),